--- a/Finnish/main/MiuiCamera.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiCamera.apk/res/values-fi-rFI/strings.xml
@@ -173,8 +173,9 @@ ja optimoi valokuvasi näiden tietojen perusteella"</string>
   <string name="custom_watermark_words">Mukautettu vesileima</string>
   <string name="custom_watermark_words_input_hint">Anna teksti</string>
   <string name="custom_watermark_words_save_success">Tallennettiin onnistuneesti</string>
-  <string name="device_48m_watermark_default_text">48MP KAKSOISKAMERA</string>
-  <string name="device_watermark_default_text">AI KAKSOISKAMERA</string>
+  <string name="device_48m_watermark_default_text">48MP KOLMOISKAMERA</string>
+  <string name="device_watermark_default_text">AI-KOLMOISKAMERA</string>
+  <string name="dialog_google_lens_option_0">Google Lens (Suositeltu)</string>
   <string name="dialog_ok">OK</string>
   <string name="do_not_remind_me">Älä näytä uudelleen</string>
   <string name="dual_camera_lens_covered_toast">Linssi on peitetty.</string>
@@ -299,6 +300,19 @@ Muotokuvatilassa"</string>
   <string name="macro_mode_tip">Linssin ja kohteen etäisyys toisistaan ei pitäisi ylittää 10 cm</string>
   <string name="makeup_reset_toast">Poista meikkitehosteet</string>
   <string name="message_snap_double_confirm">Äänenvoimakkuuspainikkeen pitkä painallus käynnistää tällä hetkellä NFC:n. Korvataanko tämä ominaisuus?</string>
+  <string name="mimoji_back">Takaisin</string>
+  <string name="mimoji_cancle">Peruuta</string>
+  <string name="mimoji_confirm">Vahvista</string>
+  <string name="mimoji_delete_mimoji">Poista emoji</string>
+  <string name="mimoji_delete_success">Poistaminen onnistui</string>
+  <string name="mimoji_detect_tips">请把脸放在取景框内</string>
+  <string name="mimoji_edit_mimoji">Muokkaa emojia</string>
+  <string name="mimoji_editor">Muokkaa</string>
+  <string name="mimoji_recapture">Ota uudelleen</string>
+  <string name="mimoji_save">Tallenna</string>
+  <string name="mimoji_save_success">Tallennettiin onnistuneesti</string>
+  <string name="mimoji_selected">Valitse</string>
+  <string name="mimoji_tips">轻触拍照，长按录像</string>
   <string name="module_name_beauty">Kauneus</string>
   <string name="module_name_capture">Kuva</string>
   <string name="module_name_fun">Lyhyt video</string>
@@ -423,8 +437,8 @@ ja tuo henkilöt esiin."</string>
   <string name="pref_camera_focusmode_entry_manual">Manuaalinen</string>
   <string name="pref_camera_focusmode_entry_normal">Normaali</string>
   <string name="pref_camera_focusmode_title">Tarkennustila</string>
-  <string name="pref_camera_front_ai_scene_entry_off">AI kamera pois käytöstä</string>
-  <string name="pref_camera_front_ai_scene_entry_on">AI kamera</string>
+  <string name="pref_camera_front_ai_scene_entry_off">AI-kamera pois käytöstä</string>
+  <string name="pref_camera_front_ai_scene_entry_on">AI-kamera</string>
   <string name="pref_camera_front_bokeh_entry_off">Pois päältä</string>
   <string name="pref_camera_front_bokeh_entry_on">Päällä</string>
   <string name="pref_camera_gradienter_title">Suorista</string>
@@ -446,12 +460,14 @@ ja tuo henkilöt esiin."</string>
   <string name="pref_camera_jpegquality_title">Kuvanlaatu</string>
   <string name="pref_camera_live_sticker_internal_title">Sisäiset taikatyökalut</string>
   <string name="pref_camera_long_press_shutter_feature_title">Sulkija-painikkeen pitkä painallus</string>
-  <string name="pref_camera_long_press_viewfinder_title">Paina &amp; pidä Viewfinderiä pohjassa</string>
+  <string name="pref_camera_long_press_viewfinder_google_lens">Google Lens</string>
+  <string name="pref_camera_long_press_viewfinder_lock_ae_af">AE/AF Lukko</string>
+  <string name="pref_camera_long_press_viewfinder_title">Viewfinder Asetukset</string>
   <string name="pref_camera_long_pressing_burst_shooting_entry_burst">Sarjakuvaus</string>
   <string name="pref_camera_long_pressing_burst_shooting_entry_focus">Tarkenna</string>
   <string name="pref_camera_long_pressing_shutter_title">Paina &amp; pidä Sulkija-painiketta lukitaksesi AE/AF/AWB</string>
   <string name="pref_camera_long_pressing_viewfinder_entry_google_lens">Google Lens</string>
-  <string name="pref_camera_long_pressing_viewfinder_entry_lock_ae_af">AE &amp; AF Lukitus</string>
+  <string name="pref_camera_long_pressing_viewfinder_entry_lock_ae_af">AE/AF Lukko</string>
   <string name="pref_camera_magic_mirror_title">Taikapeili</string>
   <string name="pref_camera_manual_mode_title">Manuaalinen</string>
   <string name="pref_camera_mfnr_sat_enable_title">Ota MFNR käyttöön</string>
@@ -575,7 +591,7 @@ ja tuo henkilöt esiin."</string>
   <string name="pref_front_mirror_label_auto">Automaattinen</string>
   <string name="pref_front_mirror_title">Peilaa etukamera</string>
   <string name="pref_google_lens">Google lens</string>
-  <string name="pref_google_lens_summary">Tunnista automaattisesti QR-koodit, sähköpostit, numerot jne</string>
+  <string name="pref_google_lens_summary">Tunnista automaattisesti QR-koodit, sähköpostit, numerot ja paljon muuta</string>
   <string name="pref_google_lens_title">Lens Ehdotukset</string>
   <string name="pref_groupshot_with_primitive_title">Tallenna myös alkuperäiset kuvat</string>
   <string name="pref_manual_exposure_title">S</string>
