--- a/Finnish/main/SecurityCenter.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/SecurityCenter.apk/res/values-fi-rFI/strings.xml
@@ -998,6 +998,8 @@ Se lisätään poikkeuksiin, mutta jo ennestään estetyt kohteet ei ilmesty puh
   <string name="gamebox_type_gesture">Näytä pyyhkäisemällä</string>
   <string name="gamebox_wechat_not_find">Asenna WeChat ja yritä uudelleen.</string>
   <string name="gamebox_wifi">Wi-Fi</string>
+  <string name="gamecenter_install_fail">Ei voitu asentaa</string>
+  <string name="gamecenter_install_sucessfull">Asennettiin onnistuneesti</string>
   <string name="gateway_exception_summary">Tarkista reitittimesi ja yritä uudelleen.</string>
   <string name="gateway_exception_summary2">Palvelimeen yhdistäminen epäonnistui</string>
   <string name="gateway_exception_title">Testaa reititin</string>
@@ -1168,21 +1170,6 @@ Se lisätään poikkeuksiin, mutta jo ennestään estetyt kohteet ei ilmesty puh
   <string name="item_system_auto_download">Lataa päivitykset automaattisesti</string>
   <string name="item_usb_debug">USB-virheenkorjaus</string>
   <string name="item_virus_lib">Päivitä virustunnisteet automaattisesti</string>
-  <string name="keywords_antispam">Estolista;Esto;Musta lista;Älykäs estolista;Petos;Myyjä;Agentit;Puhelun estolista;Viestin estolista;Viestien estolista;Tekstiviestin estolista;mustalista;musta lista;estolista;esto lista;estä yhteystieto;estä yhteystietoja</string>
-  <string name="keywords_antivirus">Virus;Riski;Antivirus;Skannaa;Tietoturvatarkistus;Tarkista;Tarkista maksamisen tietoturva;maksamisen tietoturva;turvallinen maksaminen;turvalliset maksut;maksujen turvaaminen;suojaa maksaminen;suojatut maksut;turvallinen alue;maksualue</string>
-  <string name="keywords_app_permissions">Käyttöoikeudet;Sijainti;Pääsy yhteystietoihin;Käyttöoikeudet;Sovelluksen käyttöoikeudet</string>
-  <string name="keywords_auto_restart">Käynnistys;Käyttöoikeudet;Käynnistä automaattisesti;Automaattikäynnistys;Hallitse käynnistystä;MIUI käynnistys;Sovelluksen käynnistys;käynnistä sovellus automaattisesti;Ketjumainen käynnistys;Ketjuttainen käynnistys;käynnistä</string>
-  <string name="keywords_buy_flow">data;mobiilidata;osta dataa;osta mobiilidataa;topup dataa;datapaketti</string>
-  <string name="keywords_cleanmaster">Roska;Puhdista;Nopeuta;Tallennustila;Välimuisti;Tyhjennä tallennustila;tyhjennä roska;roska;lisää;lisää talennustilaa;lisää tilaa;puhdista;syväpuhdista;puhdistaja</string>
-  <string name="keywords_gamebooster">Peli;nopeuden parantaja;Suorituskykytila;Älä häiritse;Pelit;Pelaaminen;Pelin nopeus;paranna</string>
-  <string name="keywords_networkassistant_1">Data;Liikenne</string>
-  <string name="keywords_networkassistant_2">Data;Kalibroi</string>
-  <string name="keywords_networkassistant_4">Yhteys;Internet;Testi</string>
-  <string name="keywords_powercenter">Säästä akkua;Kuumenee;Ota käyttöön;Poista käytöstä;Akku;Tyhjentyy;Akku;Akkuongelmat;Virta;Vuotaa;Kuumenee;Virransäästö;Virransäästäjä;Virran säästö;Akun säästö</string>
-  <string name="keywords_powercenter_powerrank">Virrankäyttö</string>
-  <string name="keywords_securitycenter">Tietoturva;Tarkista;Skannaa</string>
-  <string name="keywords_securitycenter_settings">Akun käyttö;Hallitse käynnistystä;Asenna käyttäen USB;Sovelluksen käyttöoikeudet;Osta mobiilidataa;Estolista;Datan käyttö;Kalibroi datapaketti;Testaa verkko;Säästä akkua;Kuumenee;Ota käyttöön;Poista käytöstä;Akku;Vuotaa;Akkuongelmat;Virta;Virransäästö;Virransäästäjä;Virran säästö;Akun säästö;Käynnistys;Käyttöoikeudet;Automaattinen käynnistys;MIUI automaattinen käynnistys;Sovelluksen automaattinen käynnistys;käynnistä sovellus automaattisesti;Ketjuttainen käynnistys;Ketjumainen käynnistys;Käynnistää;USB asennus;Asenna tietokoneelta;ADB asennus;Sijainti;Pääsy yhteystietoihin;data;mobiilidata;osta dataa;topup data;datapaketti;Estä;Musta lista;Älykäs estolista;Huijaus;Myyjä;Agentit;Puhelun estolista;Viestin estolista;Viestien estolista;Tekstiviestin estolista;mustalista;musta lista;estolista;esto lista;huijaus;estä yhteystieto;estä yhteystietoja;Liikenne;Kalibroi;Yhteys;Internet;Testaa;Akun käyttö;Akun optimointi;Virrankäyttö;Peli;nopeuden parantaja;Suorituskykytila;Älä häiritse</string>
-  <string name="keywords_usb_install">USB asennus;asenna tietokoneelta;ADB asennus</string>
   <string name="kilobyteShort">Kt</string>
   <string name="kilobyte_per_second">Kt/s</string>
   <string name="label_callwait">Puhelun odottamisen ilmoitus</string>
@@ -1551,7 +1538,6 @@ Kokeile käyttää toista ethernet-kaapelia reitittimesi yhdistämiseen. Jos luu
   <string name="om_locked_apps_summary">Lukittuja sovelluksia ei huomioida nopeuden parantamisessa.</string>
   <string name="om_memory_clean_memory_info_text">%1$s / %2$s</string>
   <string name="om_not_finish_speedboost">Nopeuden parantamista vaaditaan</string>
-  <string name="om_promotion">Mainos</string>
   <string name="om_running_locked_apps">Käynnissä olevat lukitut sovellukset</string>
   <string name="om_running_system_apps">Käynnissä olevat järjestelmäsovellukset</string>
   <string name="om_running_third_apps">Käynnissä olevat kolmannen osapuolen sovellukset</string>
@@ -1588,7 +1574,6 @@ Kokeile käyttää toista ethernet-kaapelia reitittimesi yhdistämiseen. Jos luu
   <string name="operator_number_telcom">10000</string>
   <string name="operator_number_unicom">10010</string>
   <string name="optimize_manage_title">Paranna nopeutta</string>
-  <string name="optimize_result_ads_close_text">Mainos</string>
   <string name="optimize_result_available_memory_info">Käytettävissä oleva muisti</string>
   <string name="optimize_result_button_cloudspace">Lisää pilven tallennustilaa</string>
   <string name="optimize_result_button_consume_power_analysis">Skannaa akku</string>
@@ -1641,21 +1626,6 @@ Kokeile käyttää toista ethernet-kaapelia reitittimesi yhdistämiseen. Jos luu
   <string name="password_type">Vaihda salasana</string>
   <string name="password_type_underline">Vaihda salasana</string>
   <string name="password_xspace_forget_pattern_message">Vaihtaaksesi Toisen tilan salasanasi, sinun täytyy poistaa nykyinen Toinen tila ja luoda uusi.</string>
-  <string name="path_antispam">Järjestelmäsovellukset/Tietoturva/Estolista</string>
-  <string name="path_antivirus">Järjestelmäsovellukset/Tietoturva/Virustarkistus</string>
-  <string name="path_app_permissions">Järjestelmäsovellukset/Tietoturva/Käyttöoikeudet/Sovelluksen käyttöoikeudet</string>
-  <string name="path_auto_restart">Järjestelmäsovellukset/Tietoturva/Käyttöoikeudet/Käynnistys</string>
-  <string name="path_buy_flow">Järjestelmäsovellukset/Tietoturva/Data usage/Osta mobiilidataa</string>
-  <string name="path_cleanmaster">Järjestelmäsovellukset/Tietoturva/Puhdistaja</string>
-  <string name="path_gamebooster">Järjestelmäsovellukset/Tietoturva/Pelien nopeuttaja</string>
-  <string name="path_networkassistant_1">Järjestelmäsovellukset/Tietoturva/Datan käyttö</string>
-  <string name="path_networkassistant_2">Järjestelmäsovellukset/Tietoturva/Datan käyttö</string>
-  <string name="path_networkassistant_4">Järjestelmäsovellukset/Tietoturva/Datan käyttö/Testaa verkko</string>
-  <string name="path_powercenter">Järjestelmäsovellukset/Tietoturva/Akun optimointi</string>
-  <string name="path_powercenter_powerrank">Akku &amp; suorituskyky/Akun käyttö</string>
-  <string name="path_securitycenter">Järjestelmäsovellukset/Tietoturva</string>
-  <string name="path_securitycenter_settings">Järjestelmäsovellukset/Tietoturva</string>
-  <string name="path_usb_install">Järjestelmäsovellukset/Tietoturva/Käyttöoikeudet/Asenna USB:n kautta</string>
   <string name="pc_activity_title">Optimoi akku</string>
   <string name="pc_battery_history_show_imei">IMEI:</string>
   <string name="pc_install_manager">Asenna USB:n kautta</string>
@@ -1923,21 +1893,6 @@ Kalibroinnin aikana, MIUI lähettää tekstiviestin operaattorillesi saadakseen 
   <string name="reset_data_dialog_message">Tämä laite ei ole liitettynä Mi Tiliisi. Laitetta ei voi palauttaa tai salasanaa nollata. Varmuuskopioi kaikki tärkeät tiedot ja suorita tehdasasetuksien palauttaminen. Kaikki tietosi poistetaan pysyvästi ja SD-korttisi alustetaan tehdasasetuksien palauttamisen aikana.</string>
   <string name="reset_data_dialog_ok">Tehdasasetuksien palautus</string>
   <string name="reset_data_title">Salasanaa ei voi palauttaa</string>
-  <string name="resource_antispam">Estolista</string>
-  <string name="resource_antivirus">Virustarkistus</string>
-  <string name="resource_app_permissions">Sovelluksien käyttöoikeudet</string>
-  <string name="resource_auto_restart">Hallitse käynnistystä</string>
-  <string name="resource_buy_flow">Osta mobiilidataa</string>
-  <string name="resource_cleanmaster">Puhdistaja</string>
-  <string name="resource_gamebooster">Pelien nopeuttaja</string>
-  <string name="resource_networkassistant_1">Datan käyttö</string>
-  <string name="resource_networkassistant_2">Kalibroi datapaketti</string>
-  <string name="resource_networkassistant_4">Testaa verkko</string>
-  <string name="resource_powercenter">Akun optimointi</string>
-  <string name="resource_powercenter_powerrank">Akku &amp; suorituskyky</string>
-  <string name="resource_securitycenter">Tietoturva</string>
-  <string name="resource_securitycenter_settings">Tietoturva</string>
-  <string name="resource_usb_install">Asenna USB:n kautta</string>
   <string name="result_autoscan_header">Maksujen seuranta</string>
   <string name="result_autoscan_info">Seuraa automaattisesti järjestelmän ympäristöä, kun maksusovellus käynnistetään</string>
   <string name="result_sms_header">Viestintäriskejä havaittu</string>
@@ -2134,8 +2089,7 @@ jonka määritit manuaalisesti (%2$s). Vaihdetaanko SIM-kortin sijainniksi %3$s?
   <string name="st_confirm_dialog_summary_oversea_call">Ota käyttöön estääksesi kaikki saapuvat puhelut ulkomaisista puhelinnumeroista.</string>
   <string name="st_confirm_dialog_summary_stranger_call">Kaikki puhelut muukalaisilta estetään.</string>
   <string name="st_filter_keywords_setting_summary1">Viestit tuntemattomilta numeroilta, jotka sisältävät tässä listassa olevia sanoja estetään.</string>
-  <string name="st_filter_keywords_setting_summary2">"
-(Käytä pilkkua erotellaksesi monta avainsanaa)"</string>
+  <string name="st_filter_keywords_setting_summary2">(Käytä pilkkua erotellaksesi monta avainsanaa)</string>
   <string name="st_filter_keywords_setting_summary3">Viestit tuntemattomilta numeroilta, jotka sisältää tässä luettelossa olevat sanat päästetään läpi.</string>
   <string name="st_group_list_management">Hallitse estolistaa</string>
   <string name="st_hint_add_head_number">Syötä etuliite</string>
@@ -2583,7 +2537,6 @@ Lisää saldoa napauttamalla."</string>
   <string name="use_immediately">Käytä</string>
   <string name="user_define_title">Lisää sääntöjä</string>
   <string name="video_repeat">Toista uudelleen</string>
-  <string name="virus_ad_icon_text">Mainos</string>
   <string name="virus_auto_update_engine">Automaattinen päivitys: %s</string>
   <string name="virus_scan_process_pre">%</string>
   <string name="virus_update_tips_title">Varoitus</string>
