--- a/Finnish/main/SecurityAdd.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/SecurityAdd.apk/res/values-fi-rFI/strings.xml
@@ -1,6 +1,7 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <string name="app_name">Turvallisuuspalvelun lisäosa</string>
+  <string name="ad_downloading">Ladataan…</string>
+  <string name="app_name">Järjestelmäpalvelun liitännäinen</string>
   <string name="cancel_button">Peruuta</string>
   <string name="fastboot_locked_answer_1">Fastboot on perinteinen Mi laitteiden asennusmenetelmä. Kun laite on Fastboot-tilassa, kaikkiin siihen tallennettuihin tietoihin päästään käsiksi ja ne voidaan poistaa suoraan. Lukitsemme Fastbootin varmistaaksemme, että tietosi pysyvät turvallisina, jos hukkaat laitteen ja se takaa myös Etsi laite -ominaisuuksien luotettavuuden.</string>
   <string name="fastboot_locked_answer_2">Jos hukkaat laitteesi, Fastboot takaa laitteeseen tallennettujen tietojen turvallisuuden. Jos avaat Fastbootin, et voi enää lukita laitettasi etäkäytöllä tai poistaa laitteen tietoja käyttämällä Etsi laite -ominaisuutta. Siksi emme suosittele laitteesi Fastbootin avaamista.</string>
